--- a/views/artist-results.hbs
+++ b/views/artist-results.hbs
@@ -1,7 +1,7 @@
 <h1>ARTIST RESULT</h1>
   {{#each artistResults}}
     <h2> Artist Name: {{this.name}} </h2>
-    <img src="{{this.images.0.url}}">
-    <button> BUTTON </button>
+    <img src="{{this.images.1.url}}">
+    <button> VIEW ALBUMS </button>
   {{/each}}
 
