--- a/views/form.hbs
+++ b/views/form.hbs
@@ -1,4 +1,4 @@
-<form action="/artist-results" method="GET">
+<form action="/artist-search" method="GET">
   <label>
     Search
     <input type="text" name="artistName">
