--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -3,9 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <link rel="stylesheet" href="../public/styles/style.css">
+  <title>STRONGIFY</title>
 </head>
 <body>
+  <main>
+
   {{{body}}}
+
+  </main>
 </body>
 </html>
